crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__unary.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/unary.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            6,
        ),
        range: 0..10,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        3,
                    ),
                    range: 0..5,
                    value: UnaryOp(
                        ExprUnaryOp {
                            node_index: NodeIndex(
                                2,
                            ),
                            range: 0..5,
                            op: Not,
                            operand: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        1,
                                    ),
                                    range: 4..5,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        5,
                    ),
                    range: 9..10,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(
                                4,
                            ),
                            range: 9..10,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | not x := 1
  |       ^^ Syntax Error: Expected a statement
  |
